--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="imageview_width_height">70dp</dimen>
     <dimen name="player_button_dimen">50dp</dimen>
+    <dimen name="player_button_dimen_land">40dp</dimen>
 </resources>
